--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,7 @@ set-option -g status-position top
 
 # Count sessions start at 1
 set -g base-index 1
+setw -g pane-base-index 1
 
 # Set emacs bindings
 set -g mode-keys emacs
@@ -48,13 +49,12 @@ bind-key C-x last-window
 unbind n
 bind n new-window
 
+bind -t emacs-copy M-w copy-pipe "pbcopy"
+
 # Switch windows
 # usage: "option+arrow" (without prefix key)
 bind -n M-Left  previous-window
 bind -n M-Right next-window
-
-# Reload tmux configuration
-bind r source-file ~/.tmux.conf; display "Reloaded tmux"
 
 # Pageup enters scroll mode
 bind -n Pageup copy-mode -u
@@ -65,4 +65,7 @@ set -g history-limit 50000
 
 # mouse
 set-option -g mouse on
+
+# Reload tmux configuration
+bind r source-file ~/.tmux.conf; display "Reloaded tmux"
 
