Change tmux bindings to be more friendly

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,7 @@ set -g window-status-current-fg cyan
 bind b choose-window
 bind C-f command-prompt "find-window '%%'"
 bind k confirm-before -p "kill-window #W? (y/n)" kill-window
-bind-key C-x last-window
+bind-key C-z last-window
 
 unbind n
 bind n new-window
@@ -52,9 +52,12 @@ bind n new-window
 bind -t emacs-copy M-w copy-pipe "pbcopy"
 
 # Switch windows
-# usage: "option+arrow" (without prefix key)
-bind -n M-Left  previous-window
-bind -n M-Right next-window
+# usage: "C+arrow" (without prefix key)
+bind -n C-Left  previous-window
+bind -n C-Right next-window
+
+# mouse
+set-option -g -q mouse on
 
 # Pageup enters scroll mode
 bind -n Pageup copy-mode -u
@@ -62,9 +65,6 @@ bind -n WheelUpPane copy-mode
 
 # scrollback buffer n lines
 set -g history-limit 50000
-
-# mouse
-set-option -g mouse on
 
 # Reload tmux configuration
 bind r source-file ~/.tmux.conf; display "Reloaded tmux"
