--- a/tmux.conf
+++ b/tmux.conf
@@ -25,17 +25,17 @@ set -g set-titles on
 set -g set-titles-string '#(whoami) :: #h'
 
 # Set status bar
-# set -g status-utf8 on
-# set -g utf8 on
+set -g status-utf8 on
+set -g utf8 on
 
 set -g status-bg colour240
 set -g status-fg white
 set -g status-interval 5 
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[fg=Green]#(whoami)#[fg=white]@#(hostname -s)::#(curl ipecho.net/plain;echo) >> "
+set -g status-left "#[fg=Green]#(whoami) @ #(hostname -s)#[fg=white]::#(curl ipecho.net/plain;echo) >> "
 set -g status-justify left
-set -g status-right '#[fg=Green]#S #[fg=white]%a %d %b %R'
+set -g status-right '#[fg=Green]#S'
 set -g window-status-current-fg cyan
 
 # Set New  Keybindings
@@ -67,5 +67,5 @@ bind -n WheelUpPane copy-mode
 set -g history-limit 50000
 
 # Reload tmux configuration
-bind r source-file ~/.tmux.conf; display "Reloaded tmux"
+bind r source-file $HOME/.tmux.conf; display "Reloaded tmux"
 
