--- a/tmux.conf
+++ b/tmux.conf
@@ -25,9 +25,6 @@ set -g set-titles on
 set -g set-titles-string '#(whoami) :: #h'
 
 # Set status bar
-set -g status-utf8 on
-set -g utf8 on
-
 set -g status-bg colour240
 set -g status-fg white
 set -g status-interval 5 
@@ -67,5 +64,7 @@ bind -n WheelUpPane copy-mode
 set -g history-limit 50000
 
 # Reload tmux configuration
-bind r source-file $HOME/.tmux.conf; display "Reloaded tmux"
+bind r source-file $HOME/.tmux.conf\; display "Reloaded tmux"
 
+# Site-specific config
+# source-file ~/.tmux.conf.local
