--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
-	url = https://github.com/mangeshgupte/oh-my-zsh
+	url = https://github.com/mangeshgupte/oh-my-zsh.git
