--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+%backup%~
 emacs.d/elpa
+emacs.d/.session
+emacs.d/recentf
+emacs.d/tramp
+emacs.d/ido.last
+emacs.d/session.*
 emacs.d/new/cedet/
+emacs.d/transient/
+emacs.d/auto-save-list/
 SessionDesktop.el
